Bug 1767227 - Clean up listeners when a message database is forced to close. r=john.bieling

Differential Revision: https://phabricator.services.mozilla.com/D145214

--HG--
extra : rebase_source : f9689fa4498255b61f521cac5400a89ee0e308e5